--- a/templates/index.html
+++ b/templates/index.html
@@ -1,123 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Jaden's website</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="Jaden's Website" />
-    <meta
-      property="og:description"
-      content="This is Jaden's/Gold#1337's Website"
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.discordapp.com/attachments/805911515022360587/847437849766526986/image0.jpg"
-    />
-    <meta property="og:url" content="jadend.xyz" />
-    <link rel="stylesheet" href="../static/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-      .py-5 {
-        padding-top:40rem !important;
-      }
-
-      @media only screen and (max-width: 600px) {
-        #firstback {
-          left: 0;
-          margin: 0;
-          padding: 0;
-          position: absolute;
-          height: 400px;
-          width: 100% !important;
-          float: left;
-        }
-
-        .py-5 {
-          padding-top: 5rem !important;
-        }
-
-        #textoverimage {
-          height: 400px !important;
-        }
-
-        #maintxt {
-          position: relative;
-          text-align: center;
-          z-index: 2;
-        }
-      }
-    </style>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: #1868c9; box-shadow: 1px 1px 15px black"
-    >
-      <div class="container-fluid">
-        <p class="navbar-brand mt-0">jadend.xyz</p>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul
-            class="navbar-nav mr-auto mb-2 mb-lg-0 nav"
-            id="bs-example-navbar-collapse-1"
-          >
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <article>
-      <div class="container-fluid" id="textoverimage">
-        <img src="../static/background.jpg" id="firstback" />
-        <h1 class="text-center" style="color: white" id="maintxt">Jaden</h1>
-      </div>
-    </article>
-    <main>
-      <div class="album py-5 bg-light" style="">
-        <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col">
-              <div class="card shadow-sm">
-                <svg
+   <head>
+      <title>Jaden's website</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta property="og:title" content="Jaden's Website" />
+      <meta
+         property="og:description"
+         content="This is Jaden's/Gold#1337's Website"
+         />
+      <meta
+         property="og:image"
+         content="https://cdn.discordapp.com/attachments/805911515022360587/847437849766526986/image0.jpg"
+         />
+      <meta property="og:url" content="jadend.xyz" />
+      <link rel="stylesheet" href="../static/styles.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+         />
+      <link rel="preconnect" href="https://fonts.gstatic.com" />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+         rel="stylesheet"
+         />
+      <style>
+         .bd-placeholder-img {
+         font-size: 2rem;
+         text-anchor: middle;
+         -webkit-user-select: none;
+         -moz-user-select: none;
+         user-select: none;
+         }
+         @media (min-width: 768px) {
+         .bd-placeholder-img-lg {
+         font-size: 3.5rem;
+         }
+         }
+         .py-5 {
+         padding-top:40rem !important;
+         }
+         @media only screen and (max-width: 600px) {
+         #firstback {
+         left: 0;
+         margin: 0;
+         padding: 0;
+         position: absolute;
+         height: 400px;
+         width: 100% !important;
+         float: left;
+         }
+         .py-5 {
+         padding-top: 5rem !important;
+         }
+         #textoverimage {
+         height: 400px !important;
+         }
+         #maintxt {
+         position: relative;
+         text-align: center;
+         z-index: 2;
+         }
+         }
+      </style>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+   </head>
+   <body>
+      <nav
+         class="navbar navbar-expand-lg navbar-dark fixed-top"
+         style="background-color: #1868c9; box-shadow: 1px 1px 15px black"
+         >
+         <div class="container-fluid">
+            <p class="navbar-brand mt-0">jadend.xyz</p>
+            <button
+               class="navbar-toggler"
+               type="button"
+               data-toggle="collapse"
+               data-target="#navbarNav"
+               aria-controls="navbarNav"
+               aria-expanded="false"
+               aria-label="Toggle navigation"
+               >
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+               <ul
+                  class="navbar-nav mr-auto mb-2 mb-lg-0 nav"
+                  id="bs-example-navbar-collapse-1"
+                  >
+                  <li class="nav-item">
+                     <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Link</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <article>
+         <div class="container-fluid" id="textoverimage">
+            <img src="../static/background.jpg" id="firstback" />
+            <h1 class="text-center" style="color: white" id="maintxt">Jaden</h1>
+         </div>
+      </article>
+      <main>
+         <div class="album py-5 bg-light">
+         <div class="container">
+         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+         <div class="col">
+            <div class="card shadow-sm">
+              <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
@@ -126,45 +120,39 @@
                   aria-label="Placeholder: Thumbnail"
                   preserveAspectRatio="xMidYMid slice"
                   focusable="false"
-                >
+                  >
                   <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c" />
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                    Thumbnail
+                  <rect width="100%" height="100%" fill="#969696" />
+                  <text x="50%" y="50%" fill="#eceeef" dy=".3em" style="font-size">
+                     Puck
                   </text>
-                </svg>
-
-                <div class="card-body">
+               </svg>
+               <div class="card-body">
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                      A multi-purpose open-source Discord bot made using Python. Puck is a Discord bot
+              based off Puck from Re: Zero. Puck has many useful capabilities as
+              a Discord bot. Puck can tell the weather for anywhere in the
+              United States. Puck also has music capabilities.
                   </p>
                   <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
+                     class="d-flex justify-content-between align-items-center"
+                     >
+                     <div class="btn-group">
+                        <a
+                           type="button"
+                           class="btn btn-sm btn-outline-secondary"
+                           href="https://github.com/GoldenJayz/puck"
+                           >
                         View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
+                        </a>
+                     </div>
                   </div>
-                </div>
-              </div>
+               </div>
             </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <svg
+         </div>
+         <div class="col">
+            <div class="card shadow-sm">
+               <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
@@ -173,45 +161,36 @@
                   aria-label="Placeholder: Thumbnail"
                   preserveAspectRatio="xMidYMid slice"
                   focusable="false"
-                >
+                  >
                   <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c" />
+                  <rect width="100%" height="100%" fill="#000" />
                   <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                    Thumbnail
+                     Jank Pong
                   </text>
-                </svg>
-
-                <div class="card-body">
+               </svg>
+               <div class="card-body">
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                     The world's worst version of pong. Made using Unity and C#
                   </p>
                   <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
+                     class="d-flex justify-content-between align-items-center"
+                     >
+                     <div class="btn-group">
+                        <a
+                           type="button"
+                           class="btn btn-sm btn-outline-secondary"
+                           href="https://github.com/GoldenJayz/jankpong"
+                           >
                         View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
+                     </a>
+                     </div>
                   </div>
-                </div>
-              </div>
+               </div>
             </div>
-            <div class="col">
-              <div class="card shadow-sm">
-                <svg
+         </div>
+         <div class="col">
+            <div class="card shadow-sm">
+               <svg
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
@@ -220,57 +199,50 @@
                   aria-label="Placeholder: Thumbnail"
                   preserveAspectRatio="xMidYMid slice"
                   focusable="false"
-                >
+                  >
                   <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c" />
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                    Thumbnail
+                  <rect width="100%" height="100%" fill="#ffd343" />
+                  <text x="50%" y="50%" fill="#4b8bbe" dy=".3em">
+                     WebImage Classifier
                   </text>
-                </svg>
-
-                <div class="card-body">
+               </svg>
+               <div class="card-body">
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                     A work in progress. Utilizes Python's AI capabilities to the
+                     determine the percentage of how someone looks compare to another person.
                   </p>
                   <div
-                    class="d-flex justify-content-between align-items-center"
-                  >
-                    <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
+                     class="d-flex justify-content-between align-items-center"
+                     >
+                     <div class="btn-group">
+                        <a
+                           type="button"
+                           class="btn btn-sm btn-outline-secondary"
+                           href="https://github.com/GoldenJayz/webimageclassifier"
+                           >
                         View
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Edit
-                      </button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
+                     </a>
+                     </div>
+                     <small class="text-muted">Work in Progress</small>
                   </div>
-                </div>
-              </div>
+               </div>
             </div>
-    </main>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+         </div>
+      </main>
+      <script
+         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+         crossorigin="anonymous"
+         ></script>
+      <script
+         src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+         crossorigin="anonymous"
+         ></script>
+   </body>
 </html>
